actually fixing contrast errors

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -378,7 +378,7 @@ form legend {
 form .above, form div {
     display: block;
     padding-top: 1rem;
-    color:  #03a10b;
+    color:  black;
     font-size: .8rem;
 }
 
@@ -403,7 +403,7 @@ form label.sbs {
 
 form input.submitBtn {
     border: none;
-    background-color:  #03a10b;
+    background-color:  #000a64;
     color: white;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
